--- a/main/views/main.jade
+++ b/main/views/main.jade
@@ -9,7 +9,7 @@ html(lang="en")
   body
     |<div id="fb-root"></div>
     script(src='/js/fb.js').
-    h1 Jade - node template engine
+    h1 מי אמר אל מי?
     div#binder
         button(data-bind="click:FBLogin") Log in
         a(href="/quiz", data-bind="visible: fLoggedIn") Play Game
