--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -15,7 +15,7 @@ html(lang="en")
         p(data-bind="visible: fLoading") loading...
         p(data-bind="visible:fInit") Score: 
             span(data-bind="text: nScore")
-        button(data-bind="click:DoStuff,visible:!fInit()||fGameOver()") Play the game!
+        button(data-bind="click:DoStuff,visible:!fLoading()&&!fInit()||fGameOver()") Play the game!
         p(data-bind="visible: fLinkShowing") Who put a link with the following description? 
             span(data-bind="text: sMessage")
         p(data-bind="visible: fStatusShowing") Who posted the following status 
