next game button

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -34,3 +34,4 @@ html(lang="en")
          p GAME OVER
          p Your score was: 
             span(data-bind="text: nScore")
+         button(data-bind="click:startGame") Play again!
