--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -35,4 +35,6 @@ html(lang="en")
          p GAME OVER
          p Your score was: 
             span(data-bind="text: nScore")
+            span  out of 
+            span(data-bind="text: numQuestions")
          button(data-bind="click:startGame") Play again!
