--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -33,7 +33,7 @@ html(lang="en")
             button(data-bind="click:seeNext") Next
      div(data-bind="visible: fGameOver")
          p GAME OVER
-         p Your score was: 
+         p Your score was 
             span(data-bind="text: nScore")
             span  out of 
             span(data-bind="text: numQuestions")
