--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -23,8 +23,9 @@ html(lang="en")
         p(data-bind="visible: fQuestionShowing, text: sMessage")
         div(data-bind="foreach: friendOptions, visible: fQuestionShowing")
            div
-               input(name="friends",type="radio", data-bind="value:$data,checked:$parent.sInputName")
-               span(data-bind="text:$data")
+               input(name="friends",type="radio", data-bind="value:$data.name,checked:$parent.sInputName")
+               span(data-bind="text:$data.name")
+               img(data-bind="attr:{src: $data.pic}")
         button(data-bind="visible: fQuestionShowing, click: checkName") Submit
         div(data-bind="visible:fSeeNext")
             p(data-bind="visible: fCorrect") Correct!
