--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -6,18 +6,24 @@ html(lang="en")
     script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js')
     script(src='http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js')
     script(src='http://documentcloud.github.com/underscore/underscore-min.js')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    
   body
     noscript Sorry, you need JavaScript for this to work (i.e., this is not made for mobile).
     |<div id="fb-root"></div>
     script(src='/js/fb.js')
-    h1 מי אמר אל מי?
+    h1 SAYS WHO
     div#binder
-     button(data-bind="click:FBLogin, visible: !fLoggedIn()") Log in
+    
+    
+    
+     button(class="login", data-bind="click:FBLogin, visible: !fLoggedIn()") Log in
+     
      div(data-bind="visible: fLoggedIn")
-        p Score: 
+        p(class="score") Score: 
             span(data-bind="text: nScore")
         p(data-bind="visible: fLoading") loading...
-        button(data-bind="click:startGame, visible: !fInit() && !fLoading()") Play the game!
+        button(class="play", data-bind="click:startGame, visible: !fInit() && !fLoading()") Play the game!
         p(data-bind="visible: fLinkShowing") Who put a link with the following description? 
         p(data-bind="visible: fStatusShowing") Who posted the following status: 
         p(data-bind="visible: fQuestionShowing, text: sMessage")
@@ -40,3 +46,4 @@ html(lang="en")
             span(data-bind="text: numQuestions")
          button(data-bind="click:postScore,visible:!fScorePosted()") Post your score!
          button(data-bind="click:startGame") Play again!
+      
