--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -25,7 +25,7 @@ html(lang="en")
            div
                input(name="friends",type="radio", data-bind="value:$data.name,checked:$parent.sInputName")
                span(data-bind="text:$data.name")
-               img(data-bind="attr:{src: $data.pic}")
+               img(data-bind="attr:{src: $data.pic_square}")
         button(data-bind="visible: fQuestionShowing, click: checkName") Submit
         div(data-bind="visible:fSeeNext")
             p(data-bind="visible: fCorrect") Correct!
