--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -20,8 +20,7 @@ h1 {
 }
 
 .login {
-	background:url(/images/fbconnect.png) no-repeat;
-	width:100%;
-	height:100%;
-	border:none;
+	display:block;
+	margin:0 auto;
+	width:200px;
 }
