--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -7,6 +7,8 @@ html(lang="en")
     script(src='http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js')
     script(src='http://documentcloud.github.com/underscore/underscore-min.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='http://fonts.googleapis.com/css?family=Lato:100,900',rel='stylesheet',type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700',rel='stylesheet',type='text/css')
     
   body
     noscript Sorry, you need JavaScript for this to work (i.e., this is not made for mobile).
