--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -15,6 +15,7 @@ html(lang="en")
     |<div id="fb-root"></div>
     script(src='/js/fb.js')
     h1 SAYS WHO
+    h2 How well do you know your friends?
     div#binder
     
     
