--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -1,11 +1,20 @@
 body {
 	background-color: #ff604b;
+	padding:0;
+	margin:0;
 }
 
-p {
-	font-size:100px;
+.quoteContainer {
+	height:30px;
+	overflow:none;
+}
+
+.quote, p {
+	font-size:80px;
 	color:#FFF;
 	font-family: 'Vollkorn', serif;
+	text-align: center;
+	line-height: 90px;	
 }
 
 h1 {
@@ -27,12 +36,26 @@ h2 {
 
 .score {
 	font-size:12px;
-	text-align: center;
+	float: right;
+	font-size:30px;
 }
 
 .play {
-	text-align: center;
+	display:block;
+	margin:0 auto;
 	color:#1b00ff;
+	border: none;
+	background-color: white;
+	color:#ff604b;
+	padding:10px 20px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 40px;
+}
+
+.play:hover {
+	background-color: transparent;
+	color:white;
 }
 
 .login {
@@ -40,3 +63,16 @@ h2 {
 	margin:0 auto;
 	width:200px;
 }
+
+.heading {
+	background-color: #b74233;
+	padding:10px 10px;
+}
+
+.titleSmall {
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 30px;
+	color:white;
+}
+
