--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -37,7 +37,7 @@ html(lang="en")
         div(data-bind="foreach: friendOptions, visible: fQuestionShowing")
            div
                input(name="friends",type="radio", data-bind="value:$data.name,checked:$parent.sInputName")
-               span(data-bind="text:$data.name")
+               //span(data-bind="text:$data.name")
                img(data-bind="attr:{src: $data.pic_square}")
         button(data-bind="visible: fQuestionShowing, click: checkName") Submit
         div(data-bind="visible:fSeeNext")
