--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -5,16 +5,17 @@ body {
 }
 
 .quoteContainer {
-	height:30px;
+	height:300px;
 	overflow:none;
+	background-color: blue;
 }
 
 .quote, p {
-	font-size:80px;
+	font-size:40px;
 	color:#FFF;
 	font-family: 'Vollkorn', serif;
 	text-align: center;
-	line-height: 90px;	
+	line-height: 50px;	
 }
 
 h1 {
