Add a class to the correct friend

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -53,4 +53,4 @@ html(lang="en")
 			div(class="footer", data-bind="visible: fLoggedIn")
 				div(class="choices", data-bind="foreach: friendOptions, visible: fQuestionShowing")
 					//span(data-bind="text:$data.name")
-					img(class="profpic", data-bind="click:$parent.checkName, attr:{src: $data.pic_square}")
+					img(class="profpic", data-bind="css: { 'correct': $data.fCorrectFriend }, click:$parent.checkName, attr:{src: $data.pic_square}")
