--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -101,3 +101,10 @@ h2 {
 	bottom:0;
 	width:100%;
 }
+
+.correct {
+	box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  border:10px solid green;
+}
