--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -53,4 +53,4 @@ html(lang="en")
 			div(class="footer", data-bind="visible: fLoggedIn")
 				div(class="choices", data-bind="foreach: friendOptions, visible: fQuestionShowing")
 					//span(data-bind="text:$data.name")
-					img(class="profpic", data-bind="css: { 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected }, click:$parent.checkName, attr:{src: $data.pic_square}")
+					img(class="profpic", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected }, click:$parent.checkName, attr:{src: $data.pic_square}")
