--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -103,8 +103,33 @@ h2 {
 }
 
 .correct {
+	}
+
+.CorrectNotSelected, .CorrectNotSelected:hover{
 	box-sizing:border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
   border:10px solid green;
+
+}
+
+.IncorrectSelected, .IncorrectSelected:hover {
+	box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  border:10px solid red;
+
+}
+
+.CorrectSelected, .CorrectSelected:hover {
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border:10px solid green;
+
+}
+
+.Boring, .Boring:hover {
+	
+
 }
