--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -50,4 +50,6 @@ html(lang="en")
 			div(class="footer", data-bind="visible: fLoggedIn")
 				div(class="choices", data-bind="foreach: friendOptions, visible: fQuestionShowing() || fSeeNext()")
 					//span(data-bind="text:$data.name")
-					img(class="profpic", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected }, click:$parent.checkName, attr:{src: $data.pic_square}")
+					div(class="imageWrapper")
+						img(class="profpic", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected }, click:$parent.checkName, attr:{src: $data.pic_square}")
+						span(class="name") Hello
