--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -46,6 +46,8 @@ html(lang="en")
 					button(class="postScore", data-bind="click:postScore,visible:!fScorePosted()") POST YOUR SCORE
 					</br>
 					button(class="play", data-bind="click:startGame") PLAY AGAIN
+					</br>
+					button(class="postScore",data-bind="click:leaderBoard") SEE LEADERBOARD
 				div(class="push")
 			
 			//footer pictures		
