--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -54,6 +54,6 @@ html(lang="en")
 			div(class="footer", data-bind="visible: fLoggedIn() && !fGameOver()")
 				div(class="choices", data-bind="foreach: friendOptions, visible: fQuestionShowing() || fSeeNext()")
 					//span(data-bind="text:$data.name")
-					div(class="imageWrapper", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected },")
-						img(class="profpic", data-bind="click:$parent.checkName, attr:{src: $data.pic_square}")
+					div(class="imageWrapper", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected },click:$parent.checkName")
+						img(class="profpic", data-bind="attr:{src: $data.pic_square}")
 						span(class="name", data-bind="text:$data.name")
