--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -88,6 +88,47 @@ h2 {
 	color:white;
 }
 
+.leaderboard {
+	display:block;
+	margin:0 auto;
+	color:#1b00ff;
+	border: none;
+	background-color: rgba(200,40,250,1);
+	color:#ff604b;
+	padding:10px 20px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 40px;
+}
+
+.leaderboard:hover {
+	background-color: transparent;
+	color:white;
+}
+
+.nextButton {
+	display:block;
+	margin:0 auto;
+	color:#1b00ff;
+	border: none;
+	background-color: white;
+	color:#ff604b;
+	padding:10px 20px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 40px;
+	
+	position:relative;
+	bottom:100px;
+	z-index:4;
+	
+}
+
+.nextButton:hover {
+	background-color: transparent;
+	color:white;
+}
+
 .login {
 	display:block;
 	margin:0 auto;
@@ -174,6 +215,7 @@ h2 {
    -webkit-transition: bottom .5s;
    -moz-transition: bottom .5s;
    pointer-events:none;
+   z-index:-1;
 }
 
 .IncorrectSelected{
@@ -184,6 +226,7 @@ h2 {
    -moz-transition: bottom .5s;
    cursor:default;
    pointer-events:none;
+   z-index:-1;
 }
 
 .CorrectSelected{
@@ -193,6 +236,7 @@ h2 {
    -webkit-transition: bottom .5s;
    -moz-transition: bottom .5s;
    pointer-events:none;
+   z-index:-1;
 }
 
 .Boring, .Boring:hover {
@@ -234,13 +278,8 @@ h2 {
   
 }
 
-.nextButton {
-	position:absolute;
-	z-index:3;
-	width:100%;
-	height:100%;
-	top:0;
-	background-color:transparent;
-	border:none;
-	
+.gameOver {
+	position:relative;
+	z-index:1;
 }
+
