--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -22,7 +22,7 @@ html(lang="en")
 					span(class="titleSmall") SAYS WHO
 						span(class="score") SCORE: 
 							span(data-bind="text: nScore")
-							span(class="highScore") &nbsp;&nbsp;&nbsp;HIGH SCORE: 
+							span(class="highScore") &nbsp; &nbsp; &nbsp; HIGH SCORE: 
 								span(data-bind="visible: !fHighScoreInitialized()") ... 
 								span(data-bind="visible: fHighScoreInitialized, text: nHighScore")
 				h1(data-bind="visible:!(fInit() || fLoading())") SAYS WHO
@@ -38,22 +38,23 @@ html(lang="en")
 						p(class="quote", data-bind="text: sMessage")
 				
 				//correct
-				button(class="play", data-bind="click:seeNext, visible: fSeeNext() && !fGameOver()") NEXT
-				div(data-bind="visible: fGameOver")
+				
+				div(class="gameOver",data-bind="visible: fGameOver")
 					h1 GAME OVER
 					h2 Your score was: 
 						span(data-bind="text: nScore")
 					button(class="postScore", data-bind="click:postScore,visible:!fScorePosted()") POST YOUR SCORE
 					</br>
-					button(class="play", data-bind="click:startGame") PLAY AGAIN
+					button(class="leaderboard",data-bind="click:leaderBoard") SEE LEADERBOARD
 					</br>
-					button(class="postScore",data-bind="click:leaderBoard") SEE LEADERBOARD
+					button(class="play", data-bind="click:startGame") PLAY AGAIN
 				div(class="push")
 			
 			//footer pictures		
-			div(class="footer", data-bind="visible: fLoggedIn() && !fGameOver()")
+			div(class="footer", data-bind="visible: fLoggedIn() ")
 				div(class="choices", data-bind="foreach: friendOptions, visible: fQuestionShowing() || fSeeNext()")
 					//span(data-bind="text:$data.name")
 					div(class="imageWrapper", data-bind="css: { 'Boring': $parent.fCheckingName() && !($data.fCorrectNotSelected()||$data.fIncorrectSelected()||$data.fCorrectSelected()), 'CorrectNotSelected': $data.fCorrectNotSelected, 'IncorrectSelected': $data.fIncorrectSelected, 'CorrectSelected': $data.fCorrectSelected },click:$parent.checkName")
 						img(class="profpic", data-bind="attr:{src: $data.pic_square}")
 						span(class="name", data-bind="text:$data.name")
+				button(class="nextButton", data-bind="click:seeNext, visible: fSeeNext() && !fGameOver()") NEXT
