Basic dialog functoinality

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -58,3 +58,13 @@ html(lang="en")
 						img(class="profpic", data-bind="attr:{src: $data.pic_square}")
 						span(class="name", data-bind="text:$data.name")
 				button(class="nextButton", data-bind="click:seeNext, visible: fSeeNext() && !fGameOver()") NEXT
+		div#leaderBinder(title="Pin it!")
+			div#dialog(style="display: none")
+				p(class="quote", data-bind="visible: fLoading") loading...
+				div(data-bind="visible:!fLoading(),foreach: leaders")
+					p
+						span(data-bind="text:$data.name")
+						span &nbsphas a high score of 
+						span(data-bind="text:$data.score")
+					img(data-bind="attr:{src: $data.pic_square}")
+
