get rid of old code

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -58,7 +58,7 @@ html(lang="en")
 						img(class="profpic", data-bind="attr:{src: $data.pic_square}")
 						span(class="name", data-bind="text:$data.name")
 				button(class="nextButton", data-bind="click:seeNext, visible: fSeeNext() && !fGameOver()") NEXT
-		div#leaderBinder(title="Pin it!")
+		div#leaderBinder
 			div#leaderBoard(data-bind="visible: fShowLeaderBoard")
 				button(data-bind="click:closeLeaderBoard") CLOSE
 				p(class="quote", data-bind="visible: fLoading") loading...
