Now I *think* you can scroll down and see the full question text

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -36,6 +36,8 @@ html(lang="en")
 					button(class="play", data-bind="click:startGame, visible: !fInit() && !fLoading()") PLAY
 					div(class="quoteContainer",data-bind="visible: fQuestionShowing")
 						p(class="quote", data-bind="text: sMessage")
+						p(class="quote") &nbsp
+
 				
 				//correct
 				
