some final styling and a byline

--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -47,9 +47,18 @@ html(lang="en")
 						span(data-bind="text: nScore")
 					button(class="postScore", data-bind="click:postScore,visible:!fScorePosted()") POST YOUR SCORE
 					</br>
-					button(class="leaderboard",data-bind="click:leaderBoard") SEE LEADERBOARD
+					button(class="leaderboard",data-bind="click:leaderBoard") FRIEND LEADERBOARD
 					</br>
 					button(class="play", data-bind="click:startGame") PLAY AGAIN
+					</br>
+					</br>
+					div(class="byline") Site by 
+						a(href="http://twitter.com/joshcooper417", target="_blank") @joshcooper417
+						span()  and 
+						a(href="http://twitter.com/elankiderman", target="_blank") @elankiderman
+						span() .
+					</br>
+					</br>
 				div(class="push")
 			
 			//footer pictures		
