--- a/main/public/stylesheets/style.css
+++ b/main/public/stylesheets/style.css
@@ -190,8 +190,10 @@ h2 {
 }
 
 .profpic {
-	width:16.666666667%;
+	width:25%;
 	cursor:pointer;
+	opacity:.9;
+	
 }
 
 .profpic:hover {
@@ -230,7 +232,7 @@ h2 {
 
 .CorrectNotSelected{
 	 position:relative;
-	bottom:200px;
+	bottom:150px;
 	transition:bottom .5s;
    -webkit-transition: bottom .5s;
    -moz-transition: bottom .5s;
@@ -239,7 +241,7 @@ h2 {
 
 .IncorrectSelected{
   position:relative;
-  bottom:200px;
+  bottom:150px;
 	transition:bottom .5s;
    -webkit-transition: bottom .5s;
    -moz-transition: bottom .5s;
@@ -249,7 +251,7 @@ h2 {
 
 .CorrectSelected{
 	position:relative;
-	bottom:200px;
+	bottom:150px;
 	transition:bottom .5s;
    -webkit-transition: bottom .5s;
    -moz-transition: bottom .5s;
@@ -371,5 +373,19 @@ h2 {
 	vertical-align:middle;
 }
 .textgap {
-	min-height: 200px;
+	min-height: 300px;
+}
+
+.byline {
+	text-align: center;
+	font-family: 'Vollkorn', serif;
+	font-weight: 400;
+	font-style: italic;
+	color:#FFF;
+	font-size: 20px;
+}
+
+.byline a {
+	text-decoration:none;
+	color:black;
 }
