--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -2,6 +2,14 @@ doctype html
 html(lang="en")
 	head
 		title= pageTitle
+		|<script>
+		|(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		|(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		|m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		|})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		|ga('create', 'UA-47187914-1', 'sayswho.herokuapp.com');
+		|ga('send', 'pageview');
+		|</script>
 		script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js')
 		script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js')
 		script(src='http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js')
