--- a/main/views/quiz.jade
+++ b/main/views/quiz.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
 	|<head>
 	|<title>Says Who?</title>
+	|<link rel="shortcut icon" href="images/html_icon.png">
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js')
 	script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js')
 	script(src='http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js')
